--- a/typpie/index.html
+++ b/typpie/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
-    <script src="./src/index.ts"></script>
     <div>Typpie working just fine!</div>
+    <div id="root"></div>
+    <script src="./src/index.ts"></script>
   </body>
 </html>
